--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <label> Episode 274:</label>
 
-  <input type="text" id="link"  value="Norway" readonly>
+  <input type="text" id="link"  value="https://0.uiu33.workers.dev/78a6f553ea2c78e4f0458eb079f4c267/driveleech.org/Naruto%20Shippuden%20(274)%20%20S12E32.mkv" readonly>
 
 <input type="button" value="Copy Link" id="btn" >
 
